2011-05-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (expand_df_column):  Provide a shared routine for 
	dynamic allocation of space to hold input data lines. This replaces
	three separate instances, only one of which did proper initialization.

	* src/graphics.c (finish_filled_curve): Consolidate duplicated code.

2011-05-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/gd.trm (PNG_options): Init font pointers before using them.

2011-05-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/eepic.trm:  New terminal option {size XX,YY}
	Bug #3170746

	* src/graphics.c (boundary):  Add a sanity check to make sure that the
	plot size is not so small that the boundary limits go negative.
	Implemented as int_warn(), but maybe it should be int_error().
	Bug #3154401

	* src/term_api.h src/term.c src/util.c src/util.h:  Remove dead code.

2011-05-07  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c (help_command) src/win/wgraph.c (WndGraphProc)
	src/win/winmain.c (WinExit, WinMain) src/wxtterminal/wxt_gui.cpp
	(wxtPanel::RaiseConsoleWindow, wxt_atexit): For console gnuplot on
	Windows, remove dependency on struct textwin, which represents the
	non-existant text window. Fixes e.g. overwriting of text window
	settings in wgnuplot.ini. Console gnuplot no longer depends on wtext.c
	and screenbuf.c.

	* src/standard.c (fn_asin, fn_asinh): Fix calculation for complex
	arguments. Make sure that asin(sin(z))==z. Bug #2879772.
	
	* config/README: Update to current status.

	* config/config.mgw config/config.oww: Sync with config.h created
	by autoconf tools.

2011-05-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/graph3d.c: Make "notitle" suppress contour line key entries in 
	addition to the surface key entry.  This makes it possible to draw any
	combination of surface, contours, and key entries.

2011-05-06  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* docs/plotstyles.gnu docs/gnuplot.doc: Add an illustration of the