@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.249 2010/12/05 00:01:02 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.250 2011/05/11 05:18:41 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -2797,7 +2797,9 @@ show_xyzlabel(const char *name, const char *suffix, text_label *label)
 	fprintf(stderr, ", using font \"%s\"", conv_text(label->font));
 
     if (label->rotate)
-	fprintf(stderr, ", rotated by %d degrees", label->rotate);
+	fprintf(stderr, ", rotated by %d degrees in 2D plots", label->rotate);
+    if (label->tag == ROTATE_IN_3D_LABEL_TAG)
+	fprintf(stderr, ", parallel to axis in 3D plots");
 
     if (label->textcolor.type)
 	save_textcolor(stderr, &label->textcolor);
